Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Payutc.github.io by payutc</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="payutc : Pages for http://payutc.github.io" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>payutc</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Payutc.github.io</h1>
-        <p class="header">Pages for http://payutc.github.io</p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/payutc">View on GitHub</a>
 
+          <h1 id="project_title">payutc</h1>
+          <h2 id="project_tagline">Pages for http://payutc.github.io</h2>
 
-        <ul>
-          <li><a class="buttons github" href="https://github.com/payutc">GitHub Profile</a></li>
-        </ul>
+        </header>
+    </div>
 
-      </header>
-      <section>
-        <p><a href="https://travis-ci.org/payutc/server"><img src="https://travis-ci.org/payutc/server.png?branch=master" alt="Build Status"></a></p>
-
-<h1>Introduction</h1>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>Introduction</h1>
 
 <p>payutc est un système de paiement avec porte-monnaie électronique avec une architecture client/serveur basée sur des Web Services. Il est utilisé au sein des associations de l'<a href="http://www.utc.fr">Université de Technologie de Compiègne</a>.</p>
 
@@ -38,6 +36,8 @@
 <p>Les clients utilisés à l'UTC sont :</p>
 
 <ul>
+<li>
+<a href="https://github.com/payutc/server">server</a> <a href="https://travis-ci.org/payutc/server"><img src="https://travis-ci.org/payutc/server.png?branch=master" alt="Build Status"></a> : serveur stockant l'ensemble des comptes, accessible en JSON ou SOAP</li>
 <li>
 <a href="https://github.com/payutc/casper">casper</a> : client de gestion de son compte personnel, avec rechargement, virement et visualisation de l'historique</li>
 <li>
@@ -71,11 +71,16 @@
 
 <p>Une mailing-liste regroupant les développeurs est disponible, écrivez à <a href="mailto:payutc@assos.utc.fr">payutc@assos.utc.fr</a> pour demander à être inscrit (ou pour toute autre demande !).</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
