--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="payutc : Pages for http://payutc.github.io" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>payutc by payutc</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>payutc</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">payutc</h1>
+        <p class="header">Pages for http://payutc.github.io</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/payutc">View on GitHub</a>
 
-          <h1 id="project_title">payutc</h1>
-          <h2 id="project_tagline">Pages for http://payutc.github.io</h2>
 
-        </header>
-    </div>
+        <ul>
+          <li><a class="buttons github" href="https://github.com/payutc">GitHub Profile</a></li>
+        </ul>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h1>Introduction</h1>
 
 <p>payutc est un système de paiement avec porte-monnaie électronique avec une architecture client/serveur basée sur des Web Services. Il est utilisé au sein des associations de l'<a href="http://www.utc.fr">Université de Technologie de Compiègne</a>.</p>
@@ -71,16 +71,11 @@
 
 <p>Une mailing-liste regroupant les développeurs est disponible, écrivez à <a href="mailto:payutc@assos.utc.fr">payutc@assos.utc.fr</a> pour demander à être inscrit (ou pour toute autre demande !).</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
