Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">payutc</h1>
-        <p class="header">Pages for http://payutc.github.io</p>
+        <p class="header"></p>
 
 
 
@@ -31,45 +31,47 @@
 
 <p>payutc est un système de paiement avec porte-monnaie électronique avec une architecture client/serveur basée sur des Web Services. Il est utilisé au sein des associations de l'<a href="http://www.utc.fr">Université de Technologie de Compiègne</a>.</p>
 
-<p>Ce dépôt héberge le serveur du projet. Il s'agit d'un fork de celui utilisé par <a href="http://github.com/buckutt/server">BuckUTT</a>, projet similaire déjà en service à l'UTT.</p>
+<p>Les utilisateurs peuvent recharger leur porte-monnaie en ligne à l'aide de leur carte bancaire. Ils peuvent ensuite dépenser l'argent présent sur leur compte dans toutes les associations participantes.</p>
 
-<p>Les clients utilisés à l'UTC sont :</p>
+<p>Les différents composants du système sont les suivants :</p>
 
-<ul>
-<li>
-<a href="https://github.com/payutc/server">server</a> <a href="https://travis-ci.org/payutc/server"><img src="https://travis-ci.org/payutc/server.png?branch=master" alt="Build Status"></a> : serveur stockant l'ensemble des comptes, accessible en JSON ou SOAP</li>
-<li>
-<a href="https://github.com/payutc/casper">casper</a> : client de gestion de son compte personnel, avec rechargement, virement et visualisation de l'historique</li>
-<li>
-<a href="https://github.com/payutc/scoobydoo">scoobydoo</a> :  client d'administration des droits et des produits</li>
-<li>
-<a href="https://github.com/payutc/mozart">mozart</a> : client pour les encaissements via une interface tactile</li>
-<li>
-<a href="https://github.com/payutc/pauline">pauline</a> : point de vente pour smartphones sous Android</li>
-</ul><h1>Installation</h1>
+<table>
+<tr>
+<td>[server](https://github.com/payutc/server)</td>
+        <td>Serveur stockant l'ensemble des comptes, accessible en JSON ou SOAP</td>
+        <td>PHP &amp; MySQL</td>
+    </tr>
+<tr>
+<td>[casper](https://github.com/payutc/casper)</td>
+        <td>Client de gestion de son compte personnel, avec rechargement, virement et visualisation de l'historique</td>
+        <td>PHP</td>
+    </tr>
+<tr>
+<td>[scoobydoo](https://github.com/payutc/scoobydoo)</td>
+        <td>Client d'administration des droits et des produits</td>
+        <td>PHP</td>
+    </tr>
+<tr>
+<td>[mozart](https://github.com/payutc/mozart)</td>
+        <td>Client pour les encaissements via une interface tactile</td>
+        <td>Javascript</td>
+    </tr>
+<tr>
+<td>[pauline](https://github.com/payutc/pauline)</td>
+        <td>Point de vente pour smartphones sous Android</td>
+        <td>Java</td>
+    </tr>
+</table><h1>Installation</h1>
 
-<p>Le projet utilise Composer pour la gestion des dépendances.</p>
+<p>Chaque application du projet doit être installée séparément, mais une fois le serveur le plus dur est passé une fois que le serveur tourne !</p>
 
-<p>Après avoir cloné le dépôt, il faut installer Composer :</p>
-
-<pre><code>curl -s https://getcomposer.org/installer | php
-</code></pre>
-
-<p>Puis, installer les dépendances :</p>
-
-<pre><code>php composer.phar install
-</code></pre>
-
-<p>Il faut également remplir le fichier de configuration :
-    cp config.inc.dist.php config.inc.php</p>
-
-<p>Puis ouvrir <code>config.inc.php</code> et modifier les différentes valeurs.</p>
+<p>Pour le serveur, la procédure est décrite dans le <a href="https://github.com/payutc/server/blob/master/README.md">README</a> du dépôt. Pour toutes les autres applications, la configuration se limite en général au réglage de l'URL du serveur.</p>
 
 <h1>Contribuer</h1>
 
 <p>Le projet est distribué sous licence GPLv3. Nous acceptons les contributions directement sous forme de <a href="https://help.github.com/articles/using-pull-requests">pull requests</a>.</p>
 
-<p>Une mailing-liste regroupant les développeurs est disponible, écrivez à <a href="mailto:payutc@assos.utc.fr">payutc@assos.utc.fr</a> pour demander à être inscrit (ou pour toute autre demande !).</p>
+<p>Une mailing-liste regroupant les développeurs est disponible, écrivez à <a href="mailto:payutc@assos.utc.fr">payutc@assos.utc.fr</a> pour demander à être inscrit. N'hésitez pas à écrire à cette adresse pour toute remarque ou suggestion sur payutc !</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
