Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -35,33 +35,18 @@
 
 <p>Les différents composants du système sont les suivants :</p>
 
-<table>
-<tr>
-<td>[server](https://github.com/payutc/server)</td>
-        <td>Serveur stockant l'ensemble des comptes, accessible en JSON ou SOAP</td>
-        <td>PHP &amp; MySQL</td>
-    </tr>
-<tr>
-<td>[casper](https://github.com/payutc/casper)</td>
-        <td>Client de gestion de son compte personnel, avec rechargement, virement et visualisation de l'historique</td>
-        <td>PHP</td>
-    </tr>
-<tr>
-<td>[scoobydoo](https://github.com/payutc/scoobydoo)</td>
-        <td>Client d'administration des droits et des produits</td>
-        <td>PHP</td>
-    </tr>
-<tr>
-<td>[mozart](https://github.com/payutc/mozart)</td>
-        <td>Client pour les encaissements via une interface tactile</td>
-        <td>Javascript</td>
-    </tr>
-<tr>
-<td>[pauline](https://github.com/payutc/pauline)</td>
-        <td>Point de vente pour smartphones sous Android</td>
-        <td>Java</td>
-    </tr>
-</table><h1>Installation</h1>
+<ul>
+<li>
+<a href="https://github.com/payutc/server">server</a> : serveur stockant l'ensemble des comptes, accessible en JSON ou SOAP</li>
+<li>
+<a href="https://github.com/payutc/casper">casper</a> : client de gestion de son compte personnel, avec rechargement, virement et visualisation de l'historique</li>
+<li>
+<a href="https://github.com/payutc/scoobydoo">scoobydoo</a> : client d'administration des droits et des produits</li>
+<li>
+<a href="https://github.com/payutc/mozart">mozart</a> : client pour les encaissements via une interface tactile</li>
+<li>
+<a href="https://github.com/payutc/pauline">pauline</a> : point de vente pour smartphones sous Android</li>
+</ul><h1>Installation</h1>
 
 <p>Chaque application du projet doit être installée séparément, mais une fois le serveur le plus dur est passé une fois que le serveur tourne !</p>
 
