--- a/index.html
+++ b/index.html
@@ -1,33 +1,10 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>payutc by payutc</title>
+---
+layout: default
+title: Accueil
+section: accueil
+---
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">payutc</h1>
-        <p class="header"></p>
-
-
-
-        <ul>
-          <li><a class="buttons github" href="https://github.com/payutc">GitHub Profile</a></li>
-        </ul>
-
-      </header>
-      <section>
-        <h1>Introduction</h1>
+<h1>Introduction</h1>
 
 <p>payutc est un système de paiement avec porte-monnaie électronique avec une architecture client/serveur basée sur des Web Services. Il est utilisé au sein des associations de l'<a href="http://www.utc.fr">Université de Technologie de Compiègne</a>.</p>
 
@@ -57,12 +34,3 @@
 <p>Le projet est distribué sous licence GPLv3. Nous acceptons les contributions directement sous forme de <a href="https://help.github.com/articles/using-pull-requests">pull requests</a>.</p>
 
 <p>Une mailing-liste regroupant les développeurs est disponible, écrivez à <a href="mailto:payutc@assos.utc.fr">payutc@assos.utc.fr</a> pour demander à être inscrit. N'hésitez pas à écrire à cette adresse pour toute remarque ou suggestion sur payutc !</p>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
-  </body>
-</html>
